# Chinese_text_classification

./: .gitignore  README.md  main.py  params.yaml  pyproject.toml  run.bat  run.sh  test.py
docs/: models_detailed_introduction.md  transformer_task_documentation.md
models/: scratch_transformer_classifier.py  textcnn_classifier.py  textrnn_classifier.py  textrnn_classifier_GRU.py  transformer_classifier.py
params/: params.yaml  params_GRU.yaml  params_scratch.yaml  params_textcnn.yaml  params_textrnn.yaml
pre-processed/: cnews.py  process.ipynb  toutiao.py
test/: textcnn_test.py  transformer_test.py
train/: GRU_trainer.py  scratch_transformer_trainer.py  textcnn_trainer.py  textrnn_trainer.py  transformer_trainer.py
utils/: data_loader.py  device.py  evaluate.py  plot.py  preprocessing.py  read_and_save.py  scratch_data_loader.py  scratch_tokenizer.py  timer.py  train_config.py  wraps.py
