[project]
name = "chinese-text-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "loguru>=0.7.3",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.8.0",
    "jieba>=0.42.1",
]
